--- a/.gitignore
+++ b/.gitignore
@@ -3,50 +3,47 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-
-# Compiled output
-dist/
-build/
-*.tsbuildinfo
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.development
-.env.test
-.env.production
-
-# IDE files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
+.env.*.local
 
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Build output
+dist/
+build/
 
-# Test coverage
+# Coverage reports
 coverage/
 .nyc_output/
 
-# Temporary files
-tmp/
-temp/
-.tmp
-.temp
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+*.sublime-project
+*.sublime-workspace
 
-# Package files
+# Temp files
+temp/
+tmp/
+.tmp/
+
+# Test output
+test-results/
+
+# Miscellaneous
+*.bak
+*.tmp
 *.tgz
