--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,23 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/scheduler-service:$COMMIT_SHA', '.']
-
+    args: [
+      'build', 
+      '-t', 
+      'gcr.io/$PROJECT_ID/scheduler-service', 
+      '--build-arg', 
+      'BUILD_TIMESTAMP=${_BUILD_TIMESTAMP}',
+      '--build-arg',
+      'COMMIT_SHA=$COMMIT_SHA',
+      '--build-arg',
+      'DEPLOYMENT_ID=$BUILD_ID',
+      '.'
+    ]
+  
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/scheduler-service:$COMMIT_SHA']
-
+    args: ['push', 'gcr.io/$PROJECT_ID/scheduler-service']
+  
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -15,24 +26,18 @@ steps:
       - 'deploy'
       - 'scheduler-service'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/scheduler-service:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/scheduler-service'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
-      - '--allow-unauthenticated'
-      - '--memory'
-      - '1Gi'
-      - '--cpu'
-      - '1'
-      - '--min-instances'
-      - '1'
+      - '--service-account'
+      - 'scheduler-service@delta-entity-447812-p2.iam.gserviceaccount.com'
       - '--set-env-vars'
-      - 'NODE_ENV=production,API_KEY=${_API_KEY},DB_HOST=${_DB_HOST},DB_USER=${_DB_USER},DB_PASSWORD=${_DB_PASSWORD},DB_NAME=${_DB_NAME}'
+      - 'NODE_ENV=production,BUILD_TIMESTAMP=${_BUILD_TIMESTAMP},COMMIT_SHA=$COMMIT_SHA,DEPLOYMENT_ID=$BUILD_ID'
 
-# Store images in Google Container Registry
+substitutions:
+  _BUILD_TIMESTAMP: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
+
 images:
-  - 'gcr.io/$PROJECT_ID/scheduler-service:$COMMIT_SHA'
-
-# Increase timeout to 30min
-timeout: 1800s
+  - 'gcr.io/$PROJECT_ID/scheduler-service'
