--- a/package.json
+++ b/package.json
@@ -1,41 +1,56 @@
 {
-  "name": "nifya-scheduler-service",
+  "name": "scheduler-service",
   "version": "1.0.0",
-  "description": "Centralized scheduler service for NIFYA platform",
+  "description": "NIFYA centralized scheduler service for time-based operations",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint src/**/*.js",
+    "format": "prettier --write \"src/**/*.js\""
   },
-  "type": "module",
-  "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nifyacorp/scheduler-service.git"
+  },
+  "keywords": [
+    "scheduler",
+    "nodejs",
+    "microservice",
+    "fastify",
+    "cloud-run"
+  ],
+  "author": "NIFYA Corp",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/nifyacorp/scheduler-service/issues"
+  },
+  "homepage": "https://github.com/nifyacorp/scheduler-service#readme",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
-    "@google-cloud/pubsub": "^4.1.1",
-    "@google-cloud/secret-manager": "^5.0.1",
-    "@google-cloud/storage": "^7.7.0",
-    "axios": "^1.6.5",
-    "cron-parser": "^5.0.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "fastify": "^4.26.1",
-    "jsonwebtoken": "^9.0.2",
-    "node-cron": "^3.0.3",
-    "pg": "^8.11.3",
-    "pg-pool": "^3.6.1",
-    "pino": "^8.16.2",
-    "pino-pretty": "^10.2.3",
-    "uuid": "^9.0.1",
-    "zod": "^3.24.2"
+    "@google-cloud/pubsub": "^3.7.1",
+    "@google-cloud/secret-manager": "^4.2.2",
+    "axios": "^1.4.0",
+    "cron-parser": "^4.8.1",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.21.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-plugin": "^4.5.1",
+    "node-cron": "^3.0.2",
+    "pino": "^8.15.0",
+    "pino-pretty": "^10.2.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "supertest": "^6.3.4"
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.1"
   }
 }
